# prompt.injection.shield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
examples/: basic_usage.py
shield/: __init__.py  analyzer.py  detector.py  sanitizer.py
tests/: test_shield.py
